--- a/index.html
+++ b/index.html
@@ -288,6 +288,29 @@
         return d.toLocaleString("es-ES");
       }
 
+      // === Valores derivados a nivel centro (desde visitas) ===
+      function deriveRespAudio(store) {
+        if (store.responsableAudio && store.responsableAudio.trim()) {
+          return store.responsableAudio;
+        }
+        const visitas = store.visitas || [];
+        const copia = [...visitas].reverse();
+        const visitaConResp = copia.find((v) => v.responsable);
+        return visitaConResp ? visitaConResp.responsable : "";
+      }
+
+      function deriveCentroAAR(store) {
+        const visitas = store.visitas || [];
+        const visitasConExcel = visitas.filter(
+          (v) => v.excelName && v.excelName !== ""
+        );
+        if (visitasConExcel.length === 0) return "";
+        const anyAAR = visitasConExcel.some(
+          (v) => typeof v.aar === "number" && !isNaN(v.aar) && v.aar > 0
+        );
+        return anyAAR ? "Sí" : "No";
+      }
+
       // ========= Componente principal =========
 
       function App() {
@@ -340,10 +363,19 @@
 
         function handleApplyStores() {
           if (!storesInput.trim()) return;
-          const lines = storesInput
+          let lines = storesInput
             .split("\n")
             .map((line) => line.trim())
             .filter(Boolean);
+
+          // Saltar cabecera tipo "CODIGO PROPIETARIO CENTRO..."
+          if (
+            lines.length > 0 &&
+            lines[0].toUpperCase().includes("CODIGO") &&
+            lines[0].toUpperCase().includes("PROPIETARIO")
+          ) {
+            lines = lines.slice(1);
+          }
 
           const newStores = lines.map((raw, index) => {
             const parts = raw.split("\t");
@@ -448,9 +480,9 @@
           function parseTextForChecklistAndHit(text) {
             if (!text) return;
 
-            // Buscar "capacitacion ..." + porcentaje
+            // Buscar "capacitacion ..." + porcentaje (inicial / 6 meses)
             const reCap =
-              /capacitaci[oó]n[^0-9%]{0,40}(\d{1,3})\s*%/i;
+              /capacitaci[oó]n[^0-9%]{0,80}(\d{1,3})\s*%/i;
             const mCap = text.match(reCap);
             if (mCap) {
               const num = Number(mCap[1]);
@@ -511,7 +543,9 @@
 
         // Filtro de centros
         const filteredStores = stores.filter((store) => {
-          const textoGlobal = `${store.codigo} ${store.propietario} ${store.centro} ${store.provincia} ${store.centroRegional} ${store.correo}`.toLowerCase();
+          const respAudio = deriveRespAudio(store);
+          const centroAARValor = deriveCentroAAR(store);
+          const textoGlobal = `${store.codigo} ${store.propietario} ${store.centro} ${store.provincia} ${store.centroRegional} ${store.correo} ${respAudio} ${centroAARValor}`.toLowerCase();
 
           if (search && !textoGlobal.includes(search.toLowerCase()))
             return false;
@@ -556,18 +590,21 @@
 
           if (
             filterResponsableAudio &&
-            store.responsableAudio.toLowerCase() !==
+            respAudio.toLowerCase() !==
               filterResponsableAudio.toLowerCase()
           )
             return false;
 
-          if (filterCentroAAR && store.centroAAR !== filterCentroAAR)
+          if (
+            filterCentroAAR &&
+            centroAARValor.toLowerCase() !== filterCentroAAR.toLowerCase()
+          )
             return false;
 
           return true;
         });
 
-        // Opciones para desplegables tipo Excel
+        // Opciones para desplegables tipo Excel (usando valores derivados)
         const opcionesCodigo = getUniqueSorted(stores.map((s) => s.codigo));
         const opcionesPropietario = getUniqueSorted(
           stores.map((s) => s.propietario)
@@ -581,7 +618,7 @@
           stores.map((s) => s.centroRegional)
         );
         const opcionesRespAudio = getUniqueSorted(
-          stores.map((s) => s.responsableAudio)
+          stores.map((s) => deriveRespAudio(s))
         );
 
         // ========= Métricas globales (cuenta visitas por Excel adjunto) =========
@@ -987,7 +1024,8 @@
                         </div>
                       </div>
 
-                      <div className="mt-3 flex flex-wrap gap-2 text-[11px]">
+                      {/* 8 filtros en una sola fila */}
+                      <div className="mt-3 flex flex-nowrap gap-2 text-[11px] overflow-x-auto">
                         <select
                           className="bg-white text-red-700 rounded px-2 py-1 min-w-[110px]"
                           value={filterCodigo}
@@ -1150,6 +1188,9 @@
                               const aplicaHitTienda =
                                 aplicaHitTexto(visitasConExcel);
 
+                              const respAudioCentro = deriveRespAudio(store);
+                              const centroAARValor = deriveCentroAAR(store);
+
                               const isExpanded =
                                 expandedStoreId === store.id;
 
@@ -1195,40 +1236,10 @@
                                       </span>
                                     </td>
                                     <td className="px-2 py-1">
-                                      <select
-                                        className="border rounded px-1 py-0.5"
-                                        value={store.responsableAudio}
-                                        onChange={(e) =>
-                                          updateStoreField(
-                                            store.id,
-                                            "responsableAudio",
-                                            e.target.value
-                                          )
-                                        }
-                                      >
-                                        <option value="">-</option>
-                                        <option value="Sonia">Sonia</option>
-                                        <option value="Ary Rojas">
-                                          Ary Rojas
-                                        </option>
-                                      </select>
+                                      {respAudioCentro || "-"}
                                     </td>
                                     <td className="px-2 py-1">
-                                      <select
-                                        className="border rounded px-1 py-0.5"
-                                        value={store.centroAAR}
-                                        onChange={(e) =>
-                                          updateStoreField(
-                                            store.id,
-                                            "centroAAR",
-                                            e.target.value
-                                          )
-                                        }
-                                      >
-                                        <option value="">-</option>
-                                        <option value="Sí">Sí</option>
-                                        <option value="No">No</option>
-                                      </select>
+                                      {centroAARValor || "-"}
                                     </td>
                                     <td className="px-2 py-1 text-right">
                                       {visitasConExcel.length}
