--- a/index.html
+++ b/index.html
@@ -917,7 +917,7 @@
           );
         }
 
-        // Acciones / derivaciones en exclusivos (mantenemos estructura)
+        // Acciones / derivaciones en exclusivos
         const ACTION_TYPES = [
           "Stand",
           "Mailing",
@@ -1584,7 +1584,7 @@
                                     </td>
                                     <td className="px-2 py-1 text-center">
                                       <button
-                                        className="text-[10px] px-2 py-1 rounded-full border border-red-400 text-red-600 hover:bg-red-50"
+                                        className="text-[10px] px-2 py-1 rounded-full border border-red-400 text-red-600 hover:bg-red-50 cursor-pointer"
                                         onClick={() =>
                                           setExpandedStoreId(
                                             isExpanded ? null : store.id
@@ -1914,6 +1914,13 @@
                             const isRowExpanded =
                               expandedExclusiveId === store.id;
 
+                            // Clase del botón "Ver / añadir" con manito y rojo al desplegar
+                            const toggleBase =
+                              "text-[10px] px-2 py-1 rounded-full border cursor-pointer transition-colors";
+                            const toggleClass = isRowExpanded
+                              ? `${toggleBase} border-red-500 bg-red-500 text-white hover:bg-red-600`
+                              : `${toggleBase} border-amber-400 text-amber-700 hover:bg-amber-50`;
+
                             return (
                               <React.Fragment key={store.id}>
                                 <tr className="border-b hover:bg-amber-50/80">
@@ -1976,7 +1983,7 @@
                                   </td>
                                   <td className="px-2 py-2 text-center">
                                     <button
-                                      className="text-[10px] px-2 py-1 rounded-full border border-amber-400 text-amber-700 hover:bg-amber-50"
+                                      className={toggleClass}
                                       onClick={() =>
                                         setExpandedExclusiveId(
                                           isRowExpanded ? null : store.id
@@ -1984,7 +1991,7 @@
                                       }
                                     >
                                       {isRowExpanded
-                                        ? "Ocultar detalle"
+                                        ? "Ocultar"
                                         : "Ver / añadir (+)"}
                                     </button>
                                   </td>
@@ -2184,7 +2191,7 @@
                                               Acciones, fechas y derivaciones
                                             </p>
                                             <button
-                                              className="text-[10px] px-2 py-1 rounded-full border border-amber-400 text-amber-700 hover:bg-amber-50"
+                                              className="text-[10px] px-2 py-1 rounded-full border border-amber-400 text-amber-700 hover:bg-amber-50 cursor-pointer"
                                               onClick={() =>
                                                 addExclusiveAction(store.id)
                                               }
@@ -2261,7 +2268,7 @@
                                                     }
                                                   />
                                                   <button
-                                                    className="text-red-500"
+                                                    className="text-red-500 cursor-pointer"
                                                     onClick={() =>
                                                       removeExclusiveAction(
                                                         store.id,
